# H2MMpythonlib

./: .gitignore  .readthedocs.yml  C_H2MM.c  C_H2MM.h  C_H2MM_interface.c  Example-H2MM-Analysis-ImportH2MMcode.ipynb  Example-H2MM-Analysis.ipynb  H2MM.py  H2MM_C.c  H2MM_C.pyx  H2MM_Demonstrations.ipynb  H2MM_env.yml  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  fwd_back_photonbyphoton_par.c  h2mmtest.py  model_limits_funcs.c  pyproject.toml  rho_calc.c  setup.cfg  setup.py  setupcy.py  state_path.c  viterbi.c  viterbi_interface.c
.github/workflows/: build_wheels.yml  test.yml
.ipynb_checkpoints/: Example-H2MM-Analysis-ImportH2MMcode-checkpoint.ipynb  H2MM-DecayFitting-FRETBurstsModules-checkpoint.ipynb  H2MM-DecayFitting-MultiChannel-checkpoint.ipynb  H2MM-DecayFitting-checkpoint.ipynb
H2MM_C/: C_H2MM.c  C_H2MM.h  C_H2MM_interface.c  C_H2MM_txtread.c  H2MM_C.c  H2MM_C.pyx  burst_threads.c  fwd_back.c  fwd_back_photonbyphoton_par.c  h2mm_functions.c  model_array.c  model_limits_funcs.c  pathloglik.c  rho_calc.c  state_path.c  test_H2MM_C.c  test_h2mm_array.c  test_h2mm_array_gamma.c  test_h2mm_basic.c  test_h2mm_gamma.c  test_model_array.c  test_model_array_gamma.c  test_viterbi.c  utils.c  viterbi.c  viterbi_interface.c
docs/source/: AboutH2MM.rst  ChangeNotes.rst  CustomPrint.rst  Documentation.rst  FBoundingTutorial.rst  FFTutorial.rst  FOptimizationTutorial.rst  HowTo.rst  OBoundingTutorial.rst  OOTutorial.rst  OOptimizationTutorial.rst  SecondaryControl.rst  SimTutorial.rst  Tutorial.rst  conf.py  index.rst  requirements.txt
docs/source/notebooks/: H2MM_Bounds_Tutorial-OOP.ipynb  H2MM_Bounds_Tutorial.ipynb  H2MM_Control_Optimization.ipynb  H2MM_DisplayProgress.ipynb  H2MM_Optimization_Tutorial-OOP.ipynb  H2MM_Optimization_Tutorial.ipynb  H2MM_Simulation_Tutorial.ipynb  sample_data_2det.txt
tests/: memtest_valgrind.py  test_H2MM.py
tutorialnotebook/: H2MM_API_Tutorial.ipynb  H2MM_API_Tutorial_with_FRETBursts_nsALEX.ipynb  H2MM_API_Tutorial_with_FRETBursts_usALEX.ipynb
