[project]
requires-python = ">=3.6"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cython",
    "numpy"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "*"
skip = "*musllinux*"
before-test = "pip install numpy==1.20.3"
test-requies = "pytest"
test-command = "pytest {package}/tests"
