[metadata]
name = H2MM_C
version = 0.8.2
author = Paul David Harris
author_email = paul.harris@mail.huji.ac.il
description = C level implementation of H2MM algorithm by Pirchi. 2016
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/harripd/H2MMpythonlib
project_urls =
    Bug Tracker = https://github.com/harripd/H2MMpythonlib
classifiers =
    Programming Language :: Cython
    Programming Language :: C
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
install_requires = numpy >=1.20.1

[options]
packages = find:
python_requires = >=3.6
install_requires = numpy >=1.20.1

[build-system]
requires=[ 
          cython,
          numpy >=1.20.1]

[options.packages.find]
where = H2MM_C
